# MAGOG

./: process_archive.py
backend/: .gitignore  config.toml  pyproject.toml
backend/app/: catalog_build_products.py  catalog_builds.py  catalog_dlcs.py  catalog_ingest.py  catalog_installers.py  catalog_products.py  config.py  db.py  db_schema.py  log.py
