[project]
name = "MAGOG"
version = "0.1.0"
description = "Offline backup tracker for a popular online game retailer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.3",
    "fastapi>=0.121.3",
    "oscrypto-tests>=1.3.0",
    "pefile>=2024.8.26",
    "pytest>=9.0.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
